--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroui/link": "2.2.7",
     "@heroui/listbox": "2.3.9",
     "@heroui/navbar": "2.2.8",
+    "@heroui/react": "^2.6.14",
     "@heroui/snippet": "2.2.10",
     "@heroui/switch": "2.2.8",
     "@heroui/system": "2.4.6",
     "@heroui/theme": "2.4.5",
+    "@iconify/react": "^5.2.0",
     "@react-aria/visually-hidden": "3.8.18",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
@@ -46,9 +48,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "8.4.49",
+    "prettier": "3.3.3",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16",
-    "typescript": "5.6.3",
-    "prettier": "3.3.3"
+    "typescript": "5.6.3"
   }
 }
